@@ -13,8 +13,9 @@
         admin.php,
         help.php.
       + New www/vicidial/DNCcom_inbound_filter.php.
-  - New extras/mysql_update/mysql-1519.sql (2017-034)
-
+  * New extras/mysql_update/mysql-1519.sql (2017-034).
+  * Add upstream Rev. 2822:
+    - admin.php: Fix for Test Call function for Asterisk 13.
 
 2.25.12
 
